--- a/sudoku-puzzle-app/src/app/css/sudoku_body.css
+++ b/sudoku-puzzle-app/src/app/css/sudoku_body.css
@@ -2,7 +2,8 @@
     margin: 20px auto;
     display: flex;
     align-items: stretch;
-    justify-content: center
+    justify-content: center;
+    margin-bottom: 100px;
 }
 
 .control {
