feat(logic): add find conflict cell logic

--- a/sudoku-puzzle-app/src/app/css/board.css
+++ b/sudoku-puzzle-app/src/app/css/board.css
@@ -31,6 +31,22 @@
     border-right-color: #605e5e;
 }
 
+.cell-conflict {
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  bottom: 7px;
+  right: 7px;
+  border-radius: 50%;
+  background-color: #ff4b56;
+  transform: scale3d(0, 0, 0);
+}
+
+.conflicted {
+  transform: scale3d(1, 1, 1);
+  transition: transform 250ms 100ms cubic-bezier(0.5, 2, 0.5, 1);
+}
+
 .prefilled {
     background: #e6e6e6;
 }
