feat(candidate): add new feature - candidate button

--- a/sudoku-puzzle-app/src/app/css/candidate.css
+++ b/sudoku-puzzle-app/src/app/css/candidate.css
@@ -25,6 +25,10 @@
     transition-delay: 50ms;   
 }
 
+.candidate-button-selected {
+    opacity: 1;
+}
+
 .candidate-button:hover {
     opacity: 0.5;
 }
