--- a/sudoku-puzzle-app/src/app/css/candidate.css
+++ b/sudoku-puzzle-app/src/app/css/candidate.css
@@ -25,8 +25,12 @@
     transition-delay: 50ms;   
 }
 
-.candidate-button-selected {
+.candidate-button-selected-highlight {
     opacity: 1;
+}
+
+.candidate-button-selected {
+    opacity: 0.5;
 }
 
 .candidate-button-hoverable:hover {
