--- a/sudoku-puzzle-app/src/app/css/keyboard.css
+++ b/sudoku-puzzle-app/src/app/css/keyboard.css
@@ -4,7 +4,7 @@
     width: fit-content;
     margin: auto;
     width: 240px;
-    height: 300px;
+    height: 340px;
     justify-content: space-between;
 }
 
@@ -99,4 +99,20 @@
     background-repeat: no-repeat;
     background-image: url(../images/delete.svg);
     background-position: center;
+}
+
+.keyboard-auto {
+    font-size: 16px;
+    line-height: 16px;
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.keyboard-checkbox {
+    width: 13px;
+    height: 13px;
+    margin-right: 5px;
+    cursor: pointer;
 }
