--- a/sudoku-puzzle-app/src/app/css/keyboard.css
+++ b/sudoku-puzzle-app/src/app/css/keyboard.css
@@ -4,8 +4,35 @@
     width: fit-content;
     margin: auto;
     width: 240px;
-    height: 340px;
+    height: 378px;
     justify-content: space-between;
+}
+
+.keyboard-mode {
+    background-color: #fff;
+    color: #ccc;
+    font-size: 14px;
+    width: 50%;
+    height: 38px;
+    text-align: center;
+    border: 1px solid #ccc;
+    cursor: pointer;
+}
+
+.normalMode {
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+}
+
+.candidateMode {
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+
+.keyboard-mode-selected {
+    background-color: #000;
+    color: #fff;
+    border: none;
 }
 
 .row {
@@ -25,7 +52,8 @@
     height: 70px;
     display: flex;
     justify-content: center;
-    align-items: center;   
+    align-items: center;
+    position: relative;
 }
 
 .keyboard-svg {
@@ -93,6 +121,13 @@
     background-position: center;
 }
 
+.key-candidate {
+    height: 33.3333333333%;
+    width: 33.3333333333%;
+    margin: 0;
+    transform: scale(1.2);
+}
+
 .delete {
     width: 100%;
     height: 48px;
@@ -104,7 +139,6 @@
 .keyboard-auto {
     font-size: 16px;
     line-height: 16px;
-    margin-top: 10px;
     display: flex;
     align-items: center;
     cursor: pointer;
