--- a/sudoku-puzzle-app/src/app/css/toolbar.css
+++ b/sudoku-puzzle-app/src/app/css/toolbar.css
@@ -66,6 +66,7 @@
     font-weight: 400;
     text-transform: capitalize;
     margin: 0px 16px;
+    min-width: 60px;
 }
 
 .su-timer {
@@ -138,6 +139,48 @@
     margin-left: 20px;
 }
 
-.pz-dropdown:hover {
+.pz-toolbar-dropdown-button:hover {
+    background-color: #e6e6e6;
+}
+
+.pz-dropdown-list {
+    width: 155px;
+    position: absolute;
+    right: 0;
+    z-index: 99;
+    text-align: right;
+    border: 1px solid #c4c4c4;
+    background: #fff;
+    box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, .15);
+    right: calc(-75px + 50%);
+}
+
+.pz-dropdown-menu-item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    cursor: pointer;
+}
+
+.pz-dropdown-button {
+    padding: 6px 10px;
+    text-align: left;
+    justify-content: left;
+    font-family: "nyt-franklin";
+    font-size: 1.125em;
+    line-height: 45px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.pz-dropdown-button-border {
+    width: 100%;
+    border-top: 1px solid #c4c4c4;
+}
+
+.pz-dropdown-menu-item:hover {
     background-color: #e6e6e6;
 }
