--- a/sudoku-puzzle-app/src/app/css/board.css
+++ b/sudoku-puzzle-app/src/app/css/board.css
@@ -1,11 +1,10 @@
 .board {
   display: flex;
   flex-direction: column;
-  border: 8px solid #121212;
+  border: 0.5rem solid #121212;
   width: fit-content;
-  margin: auto;
-  width: 745px;
-  height: 745px;
+  margin: 0rem auto;
+  flex-shrink: 1;
 }
 
 .row {
@@ -13,30 +12,39 @@
 }
 
 .cell-container {
-  border: 1px solid #959595;
-  width: 81px;
-  height: 81px;
+  border: 0.0625rem solid #959595;
+  width: 6.5vw; 
+  height: 6.5vw; 
+  max-width: 5.0625rem;
+  max-height: 5.0625rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+@media (max-width: 850px) {
+  .cell-container {
+    width: 10vw; 
+    height: 10vw;
+  }
+}
+
 .cell-container-bottom-border {
-    border-bottom-width: 4px;
+    border-bottom-width: 0.25rem; 
     border-bottom-color: #605e5e;
 }
 
 .cell-container-right-border {
-    border-right-width: 4px;
+    border-right-width: 0.25rem; 
     border-right-color: #605e5e;
 }
 
 .cell-conflict {
   position: absolute;
-  width: 14px;
-  height: 14px;
-  bottom: 7px;
-  right: 7px;
+  width: 0.875rem;
+  height: 0.875rem; 
+  bottom: 0.4375rem;
+  right: 0.4375rem;
   border-radius: 50%;
   background-color: #ff4b56;
   transform: scale3d(0, 0, 0);
@@ -57,7 +65,7 @@
 }
 
 .cell-item {
-    font-size: 40px;
+    font-size: 2.5rem;
     font-weight: 600;
 }
 
@@ -65,7 +73,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  font-size: 24px;
+  font-size: 1.5rem;
   border: none;
   outline: none;
 }
