--- a/sudoku-puzzle-app/src/app/css/body.css
+++ b/sudoku-puzzle-app/src/app/css/body.css
@@ -1,13 +1,23 @@
 .body {
-    margin: 20px auto;
+    width: 100vh;
+    margin: 1.25rem auto;
     display: flex;
     align-items: stretch;
     justify-content: center;
-    margin-bottom: 100px;
+    margin-bottom: 6.25rem;
 }
 
+@media (max-width: 850px) {
+    .body {
+        margin: 1rem 0rem;
+        flex-direction: column;
+        align-items: center;   
+    }
+}  
+
 .control {
-    margin-left: 40px;
+    margin-left: 2.5rem;
     width: 100%;
-    max-width: 240px;
+    max-width: 15rem;
+    flex-shrink: 0;
 }
