--- a/sudoku-puzzle-app/src/app/css/candidate.css
+++ b/sudoku-puzzle-app/src/app/css/candidate.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     width: fit-content;
     margin: auto;
-    width: 81px;
-    height: 81px;
+    width: 5.0625rem;
+    height: 5.0625rem; 
     justify-content: space-between;
 }
 
@@ -15,8 +15,8 @@
 }
 
 .candidate-button {
-    width: 27px;
-    height: 27px;
+    width: 1.6875rem; 
+    height: 1.6875rem;
     display: flex;
     justify-content: center;
     align-items: center;
