--- a/sudoku-puzzle-app/src/app/css/keyboard.css
+++ b/sudoku-puzzle-app/src/app/css/keyboard.css
@@ -3,30 +3,30 @@
     flex-direction: column;
     width: fit-content;
     margin: auto;
-    width: 240px;
-    height: 378px;
+    width: 15rem;
+    height: 23.625rem;
     justify-content: space-between;
 }
 
 .keyboard-mode {
     background-color: #fff;
     color: #ccc;
-    font-size: 14px;
+    font-size: 0.875rem;
     width: 50%;
-    height: 38px;
+    height: 2.375rem;
     text-align: center;
-    border: 1px solid #ccc;
+    border: 0.0625rem solid #ccc;
     cursor: pointer;
 }
 
 .normalMode {
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
+    border-top-left-radius: 0.1875rem;
+    border-bottom-left-radius: 0.1875rem;
 }
 
 .candidateMode {
-    border-top-right-radius: 3px;
-    border-bottom-right-radius: 3px;
+    border-top-right-radius: 0.1875rem;
+    border-bottom-right-radius: 0.1875rem;
 }
 
 .keyboard-mode-selected {
@@ -43,13 +43,13 @@
 
 .button {
     background: rgba(142, 142, 142, 0.3);
-    border: 1px solid #959595;
-    border-radius: 4px;
+    border: 0.0625rem solid #959595;
+    border-radius: 0.25rem;
 }
 
 .numberic {
-    width: 70px;
-    height: 70px;
+    width: 4.375rem;
+    height: 4.375rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -130,23 +130,30 @@
 
 .delete {
     width: 100%;
-    height: 48px;
+    height: 3rem;
     background-repeat: no-repeat;
     background-image: url(../images/delete.svg);
     background-position: center;
 }
 
 .keyboard-auto {
-    font-size: 16px;
-    line-height: 16px;
+    font-size: 1rem;
+    line-height: 1rem;
     display: flex;
     align-items: center;
     cursor: pointer;
 }
 
 .keyboard-checkbox {
-    width: 13px;
-    height: 13px;
-    margin-right: 5px;
+    width: 0.8125rem;
+    height: 0.8125rem;
+    margin-right: 0.3125rem;
     cursor: pointer;
+}
+
+.su-divider {
+    display: block;
+    width: 95%;
+    max-width: 500px;
+    border-top: 1px solid #c4c4c4;
 }
