--- a/sudoku-puzzle-app/src/app/css/toolbar.css
+++ b/sudoku-puzzle-app/src/app/css/toolbar.css
@@ -1,11 +1,11 @@
 .pz-game-toolbar {
-    border-top: 1px solid #dfdfdf;
-    border-bottom: 1px solid #dfdfdf;
-    height: 55px;
+    border-top: 0.0625rem solid #dfdfdf;
+    border-bottom: 0.0625rem solid #dfdfdf;
+    height: 3.4375rem;
     width: 100%;
     margin: 0 auto;
-    max-width: 1280px;
-    padding: 0 24px;
+    max-width: 80rem;
+    padding: 0 1.5rem;
 }
 
 .pz-flex-row {
@@ -18,7 +18,7 @@
     margin-right: auto;
     display: flex;
     justify-content: flex-start;
-    width: 350px;
+    width: 21.875rem;
 }
 
 .su-toolbar-center {
@@ -28,7 +28,7 @@
 }
 
 .su-toolbar-right {
-    width: 350px;
+    width: 21.875rem;
     margin-left: auto;
     display: flex;
     justify-content: flex-end;
@@ -47,8 +47,8 @@
 
 .back-arrow {
     background: url(../images/back.svg) center no-repeat;
-    height: 45px;
-    padding: 26.5px 12px 26.5px 16px;
+    height: 2.8125rem;
+    padding: 1.65625rem 0.75rem 1.65625rem 1rem;
 }
 
 .back-text {
@@ -60,23 +60,23 @@
 }
 
 .su-level {
-    font: 18px nyt-karnak;
+    font: 1.125rem nyt-karnak;
     color: #121212;
-    line-height: 14px;
+    line-height: 0.875rem;
     font-weight: 400;
     text-transform: capitalize;
-    margin: 0px 16px;
-    min-width: 60px;
+    margin: 0rem 1rem;
+    min-width: 3.75rem;
 }
 
 .su-timer {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0 36px;
+    margin: 0 2.25rem;
     font-family: "nyt-franklin";
-    font-size: 16px;
-    line-height: 14px;
+    font-size: 1rem;
+    line-height: 0.875rem;
     font-weight: 400;
     color: #121212;
 }
@@ -87,16 +87,16 @@
 
 .su-timer-pause {
     position: relative;
-    margin-left: 25px;
-    height: 14px;
+    margin-left: 1.5625rem;
+    height: 0.875rem;
     display: inline-flex;
     align-items: center;
 }
 
 .timer-pause-icon {
-    width: 11px;
-    height: 11px;
-    margin-bottom: 1px;
+    width: 0.6875rem;
+    height: 0.6875rem;
+    margin-bottom: 0.0625rem;
     display: inline-block;
     vertical-align: middle;
     background-position: center;
@@ -107,14 +107,15 @@
 .pz-toolbar-button {
     font-family: "nyt-franklin";
     font-size: 1.125em;
-    line-height: 45px;
-    display: inline-block;
-    padding: 6px 10px 4px;
+    display: flex;
+    align-items: center;
+    padding: 0.375rem 0.625rem 0.25rem;
+    height: 100%;
 }
 
 .su-app-help {
-    height: 20px;
-    width: 20px;
+    height: 1.25rem;
+    width: 1.25rem;
     background-repeat: no-repeat;
     display: inline-block;
     vertical-align: middle;
@@ -124,8 +125,8 @@
 
 .su-app-kebab {
     padding-right: 0;
-    height: 36px;
-    width: 19px;
+    height: 2.25rem;
+    width: 1.1875rem;
     background-repeat: no-repeat;
     display: inline-block;
     vertical-align: middle;
@@ -136,7 +137,7 @@
 .pz-dropdown {
     display: inline-block;
     position: relative;
-    margin-left: 20px;
+    margin-left: 1.25rem;
 }
 
 .pz-toolbar-dropdown-button:hover {
@@ -144,15 +145,15 @@
 }
 
 .pz-dropdown-list {
-    width: 155px;
+    width: 9.6875rem;
     position: absolute;
     right: 0;
     z-index: 99;
     text-align: right;
-    border: 1px solid #c4c4c4;
+    border: 0.0625rem solid #c4c4c4;
     background: #fff;
-    box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, .15);
-    right: calc(-75px + 50%);
+    box-shadow: 0rem 0.5rem 0.5rem 0rem rgba(0, 0, 0, .15);
+    right: calc(-4.6875rem + 50%);
 }
 
 .pz-dropdown-menu-item {
@@ -165,12 +166,12 @@
 }
 
 .pz-dropdown-button {
-    padding: 6px 10px;
+    padding: 0.375rem 0.625rem;
     text-align: left;
     justify-content: left;
     font-family: "nyt-franklin";
     font-size: 1.125em;
-    line-height: 45px;
+    line-height: 2.8125rem;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -178,7 +179,7 @@
 
 .pz-dropdown-button-border {
     width: 100%;
-    border-top: 1px solid #c4c4c4;
+    border-top: 0.0625rem solid #c4c4c4;
 }
 
 .pz-dropdown-menu-item:hover {
