--- a/sudoku-puzzle-app/src/app/css/body.css
+++ b/sudoku-puzzle-app/src/app/css/body.css
@@ -1,5 +1,5 @@
 .body {
-    width: 100vh;
+    max-width: 100vh;
     margin: 1.25rem auto;
     display: flex;
     align-items: stretch;
@@ -18,6 +18,15 @@
 .control {
     margin-left: 2.5rem;
     width: 100%;
-    max-width: 15rem;
-    flex-shrink: 0;
+}
+
+@media (max-width: 850px) {
+    .control {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-left: 0;
+
+    }
 }
