--- a/sudoku-puzzle-app/src/app/css/body.css
+++ b/sudoku-puzzle-app/src/app/css/body.css
@@ -1,4 +1,9 @@
-.body {
+.pz-game-wrapper {
+    position: relative;
+    width: 100vw;
+}
+
+.board-square {
     max-width: 100vh;
     margin: 1.25rem auto;
     display: flex;
@@ -8,20 +13,20 @@
 }
 
 @media (max-width: 850px) {
-    .body {
+    .board-square {
         margin: 1rem 0rem;
         flex-direction: column;
         align-items: center;   
     }
 }  
 
-.control {
+.board-control {
     margin-left: 2.5rem;
     width: 100%;
 }
 
 @media (max-width: 850px) {
-    .control {
+    .board-control {
         display: flex;
         flex-direction: column;
         align-items: center;
