feat(board): highlight cell

--- a/sudoku-puzzle-app/src/app/css/board.css
+++ b/sudoku-puzzle-app/src/app/css/board.css
@@ -61,8 +61,16 @@
 }
 
 .selected {
-    background: #ffda00;
+    background: #BAE6FD;
     cursor: pointer;
+}
+
+.highlighted {
+  background: #F0F9FF;
+}
+
+.sameValueHighlighted {
+  background: #E0F2FE;
 }
 
 .cell-item {
